# AtomVM

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/c/: CMakeLists.txt  CMakeLists.txt.old  main.c
src/c/libAtomVM/: CMakeLists.txt  avmpack.c  bif.c  bif.h  externalterm.h  globalcontext.c  globalcontext.h  interop.c  memory.c  module.c  module.h  nifs.c  nifs.h  opcodesswitch.h  socket.c  term.c  term.h
src/c/libAtomVM/corroded/: atom.c  atom.h  atomshashtable.c  atomshashtable.h
src/libAtomVM/: CMakeLists.txt  bif.c  module.h  nifs.h  scheduler.c  socket.c  socket.h
src/rust/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
src/rust/include/: atomvm_rust.h
src/rust/src/: atom.rs  avmpack.rs  lib.rs  mapped_file.rs  opcodes.rs  term.rs
